# transitbench

./: .gitignore  README.md  pyproject.toml  test.py
examples/: README.md  bench_usecase.py
examples/sample_data/false_positives/120610833_229.01/sector2/: hlsp_tess-data-alerts_tess_phot_00120610833-s02_tess_v1_lc.csv
examples/sample_data/false_positives/164767175_266.01/sector3/: hlsp_tess-data-alerts_tess_phot_00164767175-s03_tess_v1_lc.csv
examples/sample_data/false_positives/183979262_183.01/sector1/: hlsp_tess-data-alerts_tess_phot_00183979262-s01_tess_v1_lc.csv
examples/sample_data/false_positives/183979262_183.01/sector2/: hlsp_tess-data-alerts_tess_phot_00183979262-s02_tess_v1_lc.csv
examples/sample_data/false_positives/183985250_193.01/sector2/: hlsp_tess-data-alerts_tess_phot_00183985250-s02_tess_v1_lc.csv
examples/sample_data/false_positives/206609630_212.01/sector1/: hlsp_tess-data-alerts_tess_phot_00206609630-s01_tess_v1_lc.csv
examples/sample_data/false_positives/206609630_212.01/sector2/: hlsp_tess-data-alerts_tess_phot_00206609630-s02_tess_v1_lc.csv
src/transitbench/: README.md  __init__.py  adversarial.py  analysis.py  api.py  artifacts.py  batch.py  bls.py  budget.py  cli.py  cli_batch.py  core.py  coverage.py  detrend.py  features.py  inject.py  io.py  perf.py  plot.py  profiles.py  recover.py  targets.py  utils.py
tools/: README.md  aggregate.py  apply_profile_overrides.py  figures.py  quick_tau.py  robustness.py  run_completeness.py  smoke_all.py  tune_profiles.py
(+124 files in other folders)
